# review-kb

./: .gitignore  Makefile  README.md  pyproject.toml
docs/: integration-guide.md
docs/superpowers/plans/: 2026-07-05-code-review-knowledge-cli-completion.md  2026-07-05-code-review-knowledge-cli-core.md  2026-07-05-code-review-knowledge-cli-overrides.md  2026-07-05-gitignore-build-isolation.md
examples/: review-checklist.md
rust/: Cargo.toml  README.md
rust/.cargo/: config.toml
rust/migrations/: 001_initial.sql  002_overrides.sql
rust/src/: checklist.rs  cli.rs  config.rs  description.rs  errors.rs  json_util.rs  lib.rs  main.rs  models.rs  path_util.rs  repository.rs  service.rs  suggestions.rs  time_util.rs
rust/tests/: cli_parity.rs  cli_smoke.rs  command_tree_parity.rs  golden_checklist.rs  repository_compat.rs  service_compat.rs
rust/tests/compat/: build_db.py  service_oracle.py
rust/tests/golden/cases/: indented_and_blanks.md  mixed.md  setext.md  thematic_in_content.md  tilde_fence.md  trailing_hashes.md
rust/tests/golden/expected/: indented_and_blanks.json  thematic_in_content.json  tilde_fence.json  trailing_hashes.json
src/review_kb/: __init__.py  checklist.py  cli.py  config.py  description.py  errors.py  models.py  repository.py  service.py  suggestions.py
src/review_kb/migrations/: 001_initial.sql  002_overrides.sql  (+1 more)
tests/: test_checklist.py  test_cli.py  test_config.py  test_description.py  test_e2e.py  test_errors.py  test_overrides.py  test_repository.py  test_selection.py  test_service.py
tests/fixtures/: valid-checklist.md
(+2 files in other folders)
